# 2016-gc

./: README.md
gc-client/.github/workflows/: build.yml
gc-server/: CMakeLists.txt
gc-server/gc_server/: CMakeLists.txt  main.cpp  networking.cpp  networking.hpp  networking_inventory.hpp  networking_users.hpp
pak01/: csgo_english.txt  csgo_english_2016.txt  csgo_english_diff.txt  diff.py  game_sounds_manifest.txt  game_sounds_weapons.txt  info.txt  items_game.txt  vpk.py  vpk_RUNFORTESTING.bat  vpk_RUNFORTESTING_compress.bat  vpk_RUNTHISIFYOUWANNACOMMIT.bat  vpk_RUNTHISIFYOUWANNACOMMIT_compress.bat  vpk_compress.bat  vpk_compress.py  vpk_decompress.bat  vpk_decompress.py
pak01/cc-game/: readme.txt  split.py
pak01/other/: cube_vertigo_blurred_hdr.tga  making econs.txt
pak01/other/flashfiles/: hudweaponselected.swf  iconlib.swf
pak01/other/models_compile/: readme.txt  scale.bat  scale.py
pak01/other/music_kit_model_template/: TUTORIAL.txt  game_sounds_music.txt
pak01/other/music_kit_model_template/comp model/models/inventory_items/: music_kit.dx90.vtx  music_kit.mdl  music_kit.vvd
pak01/other/music_kit_model_template/comp model/models/inventory_items/music_kits/cc/: music_kit_aceofspades_01.dx90.vtx  music_kit_aceofspades_01.mdl  music_kit_aceofspades_01.vvd  music_kit_bladee_01.dx90.vtx  music_kit_bladee_01.mdl  music_kit_bladee_01.vvd  music_kit_codyluv_01.dx90.vtx  music_kit_codyluv_01.mdl  music_kit_codyluv_01.vvd  music_kit_izayatiji_01.dx90.vtx  music_kit_izayatiji_01.mdl  music_kit_izayatiji_01.vvd  music_kit_weiland_01.dx90.vtx  music_kit_weiland_01.mdl  music_kit_weiland_01.vvd
pak01/other/music_kit_model_template/comp model/music_kit_aceofspades_01/: music_kit.qc  music_kit.smd  music_kit_aceofspades_01.qc
pak01/other/music_kit_model_template/comp model/music_kit_aceofspades_01/music_kit_anims/: ref.smd
pak01/other/music_kit_model_template/create textures/: mp3_detail.psd
pak01/other/music_kit_model_template/create textures/weiland_01/: mp3_detail.vmt  mp3_detail.vtf  mp3_screen.vmt  mp3_screen.vtf
pak01/pak01/: readme.txt
